[package]
name = "pdf2png"
authors = ["Dmytro (Dima) Butemann <dbutemann@gmail.com>"]
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
image = "0.25.6"
pdfium-render = "0.8.20"
pdf-extract = "0.9.0"
